--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h2>Noem een waddeneiland</h2>
     <input type="text" id="eilandAntwoord">
     <br>
-    <button onclick="controle()">Controleer die antwoorden</button>
+    <button onclick="controle()">Controleer antwoorden</button>
     <p id="target"></p>
     <script type="text/javascript" src="script.js"></script>
 </body>
